# fcos-harness

./: .editorconfig  .gitignore  Cargo.toml  README.md  SKILL.md  flake.nix  justfile
src/: arch.rs  backend.rs  disk.rs  fcos.rs  goss.rs  ignition.rs  lib.rs  qemu.rs  qmp.rs  snapshot.rs  ssh.rs  state.rs  vfkit.rs
src/cli/: boot.rs  ignition.rs  mod.rs  ssh.rs  up.rs
